# amiga-reversing

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  RESOURCES.md  TODO.md  conftest.py  pyproject.toml
amiga_disk/: __init__.py  adf.py  bootloader.py  kb.py  models.py
disasm/: absolute_resolver.py  amiga_metadata.py  analysis_layout.py  analysis_loader.py  annotations.py  api.py  ascii.py  assembler_profiles.py  binary_source.py  cli.py  comments.py  data_access.py  data_render.py  decode.py  discovery.py  emitter.py  entities.py  entry_seeds.py  hardware_symbols.py  hint_validation.py  hunks.py  instruction_rows.py  jump_tables.py  metadata.py  operands.py  os_compat.py  os_include_kb.py  os_value_domains.py  phase_timing.py  project_ids.py  project_paths.py  projects.py  server.py  session.py  substitutions.py  target_metadata.py  text.py  typed_data_streams.py  types.py  validation.py
ext/amiga_includes/: README.md
ext/vasm/: Makefile  atom.c  build.bat  expr.c  expr.h  history  listing.c  make.rules  osdep.c  output_aof.c  output_aof.h  output_aout.c  output_aout.h  output_elf.c  output_elf.h  output_o65.c  output_tos.c  output_xfile.c  parse.c  parse.h  source.c  source.h  symbol.c  symbol.h  symtab.c  symtab.h  vasm.c  vasm.h  vobjdump.c
ext/vasm/doc/: cpu_arm.texi  cpu_m68k.texi  (+9 more)
kb/: __init__.py  hunk_parser.py  live_os_kb.py  m68k_parser.py  ndk_parser.py  os_reference.py  paths.py  runtime_builder.py  schemas.py
knowledge/: __init__.py  adcd21_inventory.md  amiga-file-formats.md  amiga_disk_formats.json  amiga_hunk_format.json  amiga_hunk_format.md  amiga_hw_reference.md  amiga_hw_registers.json  amiga_hw_symbols.json  amiga_iff_formats.json  amiga_iff_reference.md  amiga_ndk_corrections.json  amiga_ndk_includes_parsed.json  amiga_ndk_other_parsed.json  amiga_os_reference.json  asm_devpac.json  asm_vasm.json  m68k_instructions.json  m68k_reference.md  naming_rules.json  parser_hardcodings.md  runtime_hunk.py  runtime_m68k.py  runtime_m68k_asm.py  runtime_m68k_compute.py  runtime_m68k_executor.py  runtime_naming.py  runtime_os.py  vasm_compat.json  vasm_reference.md
m68k/: __init__.py  abstract_values.py  address_reconstruction.py  analysis.py  assembler_coverage_audit.py  constant_evaluator.py  ea_extension.py  hunk_parser.py  indirect_analysis.py  indirect_core.py  instruction_decode.py  instruction_kb.py  instruction_primitives.py  jump_tables.py  kb_util.py  m68k_asm.py  m68k_compute.py  m68k_disasm.py  m68k_executor.py  memory_provenance.py  name_entities.py  operand_resolution.py  os_calls.py  os_structs.py  per_caller_trace.py  registers.py  runtime_kb.py  static_values.py  strings.py  subroutine_ranges.py  subroutine_scan.py  subroutine_summary.py  table_recovery.py  typing_protocols.py  value_transforms.py  vasm.py  vector_tables.py
m68k_kb/: __init__.py  runtime_hardware.py  runtime_hunk.py  runtime_m68k.py  runtime_m68k_analysis.py  runtime_m68k_asm.py  runtime_m68k_compute.py  runtime_m68k_decode.py  runtime_m68k_disasm.py  runtime_m68k_executor.py  runtime_os.py  runtime_types.py
scripts/: analyze_coverage.py  analyze_disk.py  analyze_per_caller_trace.py  benchmark_target.py  build_entities.py  build_runtime_kb.py  check_mojibake.py  coverage_gaps.py  debug_encoding.py  debug_hw_parse.py  debug_pdf.py  disasm_server.py  entity_tools.py  extend_kb_schema.py  find_unparsed_bits.py  gen_disasm.py  genam_roundtrip.py  hint_scanner.py  hunk_parser.py  import_adf.py  jump_tables.py  kb_util.py  m68k_asm.py  m68k_compute.py  m68k_disasm.py  m68k_executor.py  name_entities.py  oracle_m68k_asm.py  oracle_m68k_exec.py  os_calls.py  parse_ea_modes.py  parse_hunk_format.py  parse_hw_manual.py  parse_iff_specs.py  parse_instruction_constraints.py  parse_m68k.py  parse_m68k_instructions.py  parse_ndk.py  parse_os_changes.py  parse_syntax_patterns.py  (+19 more)
scripts/web/: app.js  index.html  styles.css
targets/amiga_disk_amiga_disk_ice-1991-06-28-the-silents/: benchmark.json
targets/amiga_disk_ice-1991-06-28-the-silents/: benchmark.json
targets/amiga_disk_search-for-the-king-the-1991-accolade-disk-1-of-5/: benchmark.json
targets/amiga_hunk_bloodwych/: benchmark.json  bloodwych.s
targets/amiga_hunk_genam/: benchmark.json  genam.s
targets/amiga_hunk_monam302/: benchmark.json  monam302.s
targets/bloodwych/: Bloodwych439.s  benchmark.json  binary_path.txt  entities.jsonl
targets/genam/: GenAm.s  benchmark.json  binary_path.txt  entities.jsonl
targets/monam302/: MonAm302.s  benchmark.json  entities.jsonl
tests/: conftest.py  disasm_pipeline_support.py  os_kb_helpers.py  platform_helpers.py  runtime_kb_helpers.py  test_absolute_resolver.py  test_analysis.py  test_analyze_per_caller_trace.py  test_asm_runtime_coverage.py  test_assembler_coverage_audit.py  test_benchmark_target.py  test_bootloader_scan.py  test_build_entities.py  test_check_mojibake.py  test_code_section_reads.py  test_disasm_analysis_pipeline.py  test_disasm_annotations.py  test_disasm_emit_pipeline.py  test_disasm_metadata_pipeline.py  test_disasm_operand_coverage.py  test_disasm_pipeline.py  test_disasm_projects.py  test_disasm_render_pipeline.py  test_disasm_server.py  test_executor_effects.py  test_executor_operand_decode.py  test_executor_propagation.py  test_gen_disasm.py  test_genam_roundtrip.py  test_import_adf.py  test_indirect_resolution.py  test_m68k_roundtrip.py  test_memory_provenance.py  test_os_calls.py  test_os_compat.py  test_os_value_domains.py  test_parse_ndk.py  test_runtime_kb.py  test_sync_amiga_includes.py  test_target_render_regressions.py  (+2 more)
(+72 files in other folders)
